Adding Wicket debug options to console's debug and jrebel profiles
git-svn-id: https://svn.apache.org/repos/asf/syncope/branches/1_1_X@1550728 13f79535-47bb-0310-9956-ffa450edef68